--- a/design_system/index.html
+++ b/design_system/index.html
@@ -644,180 +644,41 @@
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Dolor sit amet consectetur adipiscing elit duis tristique. Diam vulputate ut
-          pharetra sit amet aliquam id diam maecenas. Dictumst quisque sagittis purus sit amet volutpat consequat
-          mauris.In fermentum posuere urna nec. </div>
-      </div>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-3 Grid--center">
-      <div class="Grid-cell">
-        <div class="Demo">This cell should be <strong>center-aligned</strong>.</div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Dolor sit amet consectetur adipiscing elit duis tristique. Diam vulputate ut
-          pharetra sit amet aliquam id diam maecenas. Dictumst quisque sagittis purus sit amet volutpat consequat
-          mauris.In fermentum posuere urna nec. </div>
-      </div>
-    </div>
-
-    <div class="Grid Grid--gutters Grid--cols-3 Grid--bottom">
-      <div class="Grid-cell">
-        <div class="Demo">This cell should be <strong>bottom-aligned</strong>.</div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Dolor sit amet consectetur adipiscing elit duis tristique. Diam vulputate ut
-          pharetra sit amet aliquam id diam maecenas. Dictumst quisque sagittis purus sit amet volutpat consequat
-          mauris.In fermentum posuere urna nec. </div>
-      </div>
-    </div>
-    <div class="blankHS"></div>
-
-    <h3>Nesting</h3>
-    <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
-      <div class="Grid-cell">
-        <div class="Demo content-1of3"></div>
+        <div class="Demo">
+          <div class="elementInnerDemo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
+          </div>
+        </div>
       </div>
       <div class="Grid-cell">
         <div class="Demo">
-          <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
-            <div class="Grid-cell">
-              <div class="Demo content-1of3"></div>
-            </div>
-            <div class="Grid-cell">
-              <div class="Demo">
-                <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
-                  <div class="Grid-cell">
-                    <div class="Demo content-1of3"></div>
-                  </div>
-                  <div class="Grid-cell">
-                    <div class="Demo">auto</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="blankHS"></div>
-
-    <h3>Sidebar and main content</h3>
-    <div class="Grid Grid--gutters Grid--1of6">
-      <div class="Grid-cell">
-        <div class="Demo content-1of6"></div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Demo">auto</div>
-      </div>
-    </div>
-    <div class="Grid Grid--gutters Grid--1of4">
-      <div class="Grid-cell">
-        <div class="Demo content-1of4"></div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Demo">auto</div>
-      </div>
-    </div>
-    <div class="Grid Grid--gutters Grid--1of3">
-      <div class="Grid-cell">
-        <div class="Demo content-1of3"></div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Demo">auto</div>
-      </div>
-    </div>
-
-    <div class="blankHXS"></div>
-    <div class="element">
-      <h3>Left &#47; Center &#47; Right content alignment</h3>
-    </div>
-    <div class="Grid Grid--gutters Grid--1of2">
-      <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo content-1of2"></div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="Grid Grid--gutters Grid--1of2 Grid--center">
-      <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo content-1of2"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="Grid Grid--gutters Grid--1of2 Grid--right">
-      <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo content-1of2"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="blankHXS"></div>
-    <div class="element">
-      <h3>Vertical alignment</h3>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-3 Grid--top">
-      <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">This cell should be <strong>top-aligned</strong>.</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
-          </div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          <div class="elementInnerDemo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut
             labore et dolore magna aliqua. Dolor sit amet consectetur adipiscing elit duis tristique. Diam vulputate ut
             pharetra sit amet aliquam id diam maecenas. Dictumst quisque sagittis purus sit amet volutpat consequat
-            mauris.In fermentum posuere urna nec.</div>
+            mauris.In fermentum posuere urna nec. </div>
         </div>
       </div>
     </div>
     <div class="Grid Grid--gutters Grid--cols-3 Grid--center">
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">This cell should be <strong>center-aligned</strong>.</div>
+        <div class="Demo">
+          <div class="elementInnerDemo">This cell should be <strong>center-aligned</strong>.</div>
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        <div class="Demo">
+          <div class="elementInnerDemo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
           </div>
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        <div class="Demo">
+          <div class="elementInnerDemo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut
             labore et dolore magna aliqua. Dolor sit amet consectetur adipiscing elit duis tristique. Diam vulputate ut
             pharetra sit amet aliquam id diam maecenas. Dictumst quisque sagittis purus sit amet volutpat consequat
             mauris.In fermentum posuere urna nec. </div>
@@ -827,54 +688,56 @@
 
     <div class="Grid Grid--gutters Grid--cols-3 Grid--bottom">
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">This cell should be <strong>bottom-aligned</strong>.</div>
+        <div class="Demo">
+
+          <div class="elementInnerDemo">This cell should be <strong>bottom-aligned</strong>.</div>
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        <div class="Demo">
+
+          <div class="elementInnerDemo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
           </div>
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        <div class="Demo">
+
+          <div class="elementInnerDemo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut
             labore et dolore magna aliqua. Dolor sit amet consectetur adipiscing elit duis tristique. Diam vulputate ut
             pharetra sit amet aliquam id diam maecenas. Dictumst quisque sagittis purus sit amet volutpat consequat
-            mauris.In fermentum posuere urna nec.</div>
+            mauris.In fermentum posuere urna nec. </div>
         </div>
       </div>
     </div>
-    <div class="blankHXS"></div>
+    <div class="blankHS"></div>
     <div class="element">
       <h3>Nesting</h3>
     </div>
     <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo content-1of3"></div>
-          </div>
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of3"></div>
         </div>
       </div>
-
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
+        <div class="Demo">
+          <div class="elementInnerDemo">
             <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
               <div class="Grid-cell">
-                <div class="Demo content-1of3"></div>
+                <div class="elementInnerDemo content-1of3"></div>
               </div>
               <div class="Grid-cell">
-                <div class="Demo">
+                <div class="elementInnerDemo">
                   <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
                     <div class="Grid-cell">
-                      <div class="Demo content-1of3"></div>
+                      <div class="elementInnerDemo content-1of3"></div>
                     </div>
                     <div class="Grid-cell">
-                      <div class="Demo">auto</div>
+                      <div class="elementInnerDemo">auto</div>
                     </div>
                   </div>
                 </div>
@@ -884,58 +747,49 @@
         </div>
       </div>
     </div>
-    <div class="blankHXS"></div>
+    <div class="blankHS"></div>
     <div class="element">
       <h3>Sidebar and main content</h3>
     </div>
     <div class="Grid Grid--gutters Grid--1of6">
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo content-1of6"></div>
-          </div>
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of6"></div>
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo">auto</div>
-          </div>
+        <div class="Demo">
+          <div class="elementInnerDemo">auto</div>
         </div>
       </div>
     </div>
     <div class="Grid Grid--gutters Grid--1of4">
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo content-1of4"></div>
-          </div>
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of4"></div>
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo">auto</div>
-          </div>
+        <div class="Demo">
+          <div class="elementInnerDemo">auto</div>
         </div>
       </div>
     </div>
     <div class="Grid Grid--gutters Grid--1of3">
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo content-1of3"></div>
-          </div>
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of3"></div>
         </div>
       </div>
       <div class="Grid-cell">
-        <div class="elementDemo">
-          <div class="Demo">
-            <div class="elementInnerDemo">auto</div>
-          </div>
+        <div class="Demo">
+          <div class="elementInnerDemo">auto</div>
         </div>
       </div>
     </div>
+
+
+
     <div class="blankHM"></div>
     <!-- icon, button -->
     <div class="wrapper">
