--- a/design_system/index.html
+++ b/design_system/index.html
@@ -346,22 +346,22 @@
           <h3>Font-family: Lato</h3>
           <div class="blankHXS"></div>
           <h1>h1 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h1>
-          <h1 class="testing">h1 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h1>
+          <h1 class="testing colorAPPOINTA">h1 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h1>
 
           <h2>h2 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h2>
-          <h2 class="testing">h2 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h2>
+          <h2 class="testing colorAPPOINTA">h2 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h2>
 
           <h3>h3 font-weight: 300, margin: top &#38; button 0.6em, Lorem ipsum dolor sit amet</h3>
-          <h3 class="testing">h3 font-weight: 300, margin: top &#38; button 0.6em, Lorem ipsum dolor sit amet</h3>
+          <h3 class="testing colorAPPOINTA">h3 font-weight: 300, margin: top &#38; button 0.6em, Lorem ipsum dolor sit amet</h3>
 
           <h4>h4 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h4>
-          <h4 class="testing">h4 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h4>
+          <h4 class="testing colorAPPOINTA">h4 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h4>
 
           <h5>h5 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h5>
-          <h5 class="testing">h5 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h5>
+          <h5 class="testing colorAPPOINTA">h5 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h5>
 
           <h6>h6 font-weight: 300, margin: top &#38; button 0.3em, Lorem ipsum dolor sit amet</h6>
-          <h6 class="testing">h6 font-weight: 300, margin: top &#38; button 0.3em, Lorem ipsum dolor sit amet</h6>
+          <h6 class="testing colorAPPOINTA">h6 font-weight: 300, margin: top &#38; button 0.3em, Lorem ipsum dolor sit amet</h6>
 
           <div class="blankHXS"></div>
           <strong>
