--- a/appointa/index.html
+++ b/appointa/index.html
@@ -2049,34 +2049,20 @@
                 <div class="left-zone">
                   <ul class="list">
                     <li class="item">
-                      <input type="radio" id="dropdown" name="UI" checked="checked" />
-                      <label class="dropdown" for="dropdown">Color styles</label>
+                      <input type="radio" id="Color" name="DS" checked="checked" />
+                      <label class="Color" for="Color">Color styles</label>
                       <div class="content-test">
-                        <img class="shadowFilterL" src="Components_dropdown.svg" alt="Components">
+                        <img class="shadowFilterL" src="DS_color.svg" alt="Components">
                       </div>
                     </li>
                     <li class="item">
-                      <input type="radio" id="callout" name="UI" />
-                      <label class="callout" for="callout">Text styles</label>
+                      <input type="radio" id="Text" name="DS" />
+                      <label class="Text" for="Text">Text styles</label>
                       <div class="content-test">
-                        <img class="shadowFilterL" src="Components_callout.svg" alt="Components">
+                        <img class="shadowFilterL" src="DS_Text.svg" alt="Components">
                       </div>
                     </li>
 
-                    <li class="item">
-                      <input type="radio" id="button" name="UI" />
-                      <label class="button" for="button">Grids & Navigation</label>
-                      <div class="content-test">
-                        <img class="shadowFilterL" src="Components_button.svg" alt="Components">
-                      </div>
-                    </li>
-                    <li class="item">
-                      <input type="radio" id="button" name="UI" />
-                      <label class="button" for="button">Spacing & Elevation</label>
-                      <div class="content-test">
-                        <img class="shadowFilterL" src="Components_button.svg" alt="Components">
-                      </div>
-                    </li>
                   </ul>
                 </div>
                 <div class="right-zone"></div>
