--- a/design_system/index.html
+++ b/design_system/index.html
@@ -343,27 +343,34 @@
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <h3>Font-family: Lato</h3>
-          <div class="blankHXS"></div>
+          <h3>Font family</h3>
+          <h3>Lato</h3>
+        </div>
+        <div class="element">
+          <h3>Font size &#38; Weight &#38; Color</h3>
+
+          <h3>Heading</h3>
           <h1>h1 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h1>
-          <h1 class="testing colorAPPOINTA">h1 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h1>
 
           <h2>h2 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h2>
-          <h2 class="testing colorAPPOINTA">h2 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h2>
 
           <h3>h3 font-weight: 300, margin: top &#38; button 0.6em, Lorem ipsum dolor sit amet</h3>
-          <h3 class="testing colorAPPOINTA">h3 font-weight: 300, margin: top &#38; button 0.6em, Lorem ipsum dolor sit amet</h3>
 
           <h4>h4 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h4>
-          <h4 class="testing colorAPPOINTA">h4 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h4>
 
           <h5>h5 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h5>
-          <h5 class="testing colorAPPOINTA">h5 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h5>
 
           <h6>h6 font-weight: 300, margin: top &#38; button 0.3em, Lorem ipsum dolor sit amet</h6>
-          <h6 class="testing colorAPPOINTA">h6 font-weight: 300, margin: top &#38; button 0.3em, Lorem ipsum dolor sit amet</h6>
 
           <div class="blankHXS"></div>
+          <h3>Paragraph</h3>
+
+          <p>Paragraph, defult Lorem ipsum dolor sit amet</p>
+          <p class="thick">Paragraph, Lorem ipsum dolor sit amet</p>
+          <p class="normal">Paragraph, Lorem ipsum dolor sit amet</p>
+          <p class="light">Paragraph, Lorem ipsum dolor sit amet</p>
+
+          <div class="blankHM"></div>
           <strong>
             <h3>Bold, Lorem ipsum dolor sit amet</h3>
             <h3 class="allCaps">Bold &#38; Uppercase, Lorem ipsum dolor sit amet</h3>
